# pidgin

./: .gitignore  .ocamlformat  CHANGES.md  README.md  dune-project  dune-workspace  pidgin.opam  pidgin_pp.opam
.github/workflows/: ci.yml
lib/: check.ml  check.mli  csexp.ml  csexp.mli  data.ml  data.mli  driver.ml  driver.mli  dune  error.ml  error.mli  intf.mli  kind.ml  kind.mli  misc.ml  misc.mli  pidgin.ml  pidgin.mli  render.ml  render.mli  repr.ml  repr.mli  sexp.ml  sexp.mli  validation.ml  validation.mli
lib/pp/: dune  pidgin_pp.ml  pidgin_pp.mli
test/: check_char_test.ml  check_check_negative_test.ml  check_check_positive_test.ml  check_check_test.ml  check_composite_test.ml  check_corner_cases_test.ml  check_generic_comb_test.ml  check_list_test.ml  check_numeric_gen_test.ml  check_numeric_test.ml  check_product_test.ml  check_record_test.ml  check_simple_test.ml  check_specific_test.ml  check_string_test.ml  csexp_parser_test.ml  csexp_to_string_test.ml  data_test.ml  driver_simple_round_trip_test.ml  dune  from_repr_render.ml  json_test.ml  kind_construct_test.ml  kind_inference_test.ml  kind_render.ml  kind_test.ml  pidgin_test.ml  render.ml  repr_construct_test.ml  repr_deconstruct_test.ml  repr_desugaring_test.ml  repr_render.ml  repr_test.ml  sexp_parser_test.ml  sexp_repr_test.ml  validation_test.ml
test/pp/: csexp_test.ml  dune  kind_test.ml  repr_test.ml  sexp_test.ml  value_error_test.ml
test/test_lib/: archetypes.ml  archetypes.mli  dune  eq.ml  eq.mli  pp.ml  pp.mli  sigs.mli  some_inference.ml  some_validation.ml  testable.ml  testable.mli
